Add hours marker and other ui fixes.

--- a/app/styles/addons/ember-calendar/components/as-calendar/_timetable.scss
+++ b/app/styles/addons/ember-calendar/components/as-calendar/_timetable.scss
@@ -46,6 +46,11 @@
 
     @include bem-modifier('clickable') {
       cursor: pointer;
+
+      &:hover {
+        text-decoration: underline;
+        color: #008fd9;
+      }
     }
 
     &:not(:last-child) {
@@ -53,13 +58,21 @@
     }
   }
 
+  @include bem-element('slots') {
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+  }
+
   @include bem-element('slot-label') {
     color: color(text, small);
     font-weight: $font-weight-bold;
     text-align: center;
 
-    &:first-child {
-      color: transparent;
+    &:not(:first-child) {
+      border-top: 1px solid #ececec;
     }
   }
 
@@ -80,7 +93,7 @@
   @include bem-element('days') {
     height: 100%;
     left: 0;
-    position: absolute;
+    // position: absolute;
     top: 0;
     width: 100%;
   }
@@ -101,6 +114,16 @@
     &:last-child {
       border-right: 0;
     }
+  }
+
+  @include bem-element('hour-marker') {
+    position: absolute;
+    left: 0;
+    width: 100%;
+    top: 0;
+    height: 0;
+    border-top: 2px solid #ff7f6e;
+    overflow: hidden;
   }
 
   @include bem-modifier('day') {
@@ -130,8 +153,14 @@
     }
     @include bem-element('day-name') {
       margin: 5px;
+      display: block;
       color: #888888;
       text-decoration: none;
+
+      &:hover {
+        text-decoration: underline;
+        color: #008fd9;
+      }
     }
 
     .as-calendar-occurrence--timetable {
