--- a/app/templates/components/as-calendar/timetable/content.hbs
+++ b/app/templates/components/as-calendar/timetable/content.hbs
@@ -13,6 +13,10 @@
         <a href class="as-calendar-timetable__day-name" {{action 'goTo' day.value bubbles=false}}>{{moment-format day.value "D"}}</a>
       {{/if}}
 
+      {{#if (and day.isToday (not model.isMonthView))}}
+        <div class="as-calendar-timetable__hour-marker" style={{hourMarkerStyle}}></div>
+      {{/if}}
+
       {{yield day this}}
     </li>
   {{/each}}
