Set day as default state.

--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -50,6 +50,7 @@
 </div>
 {{as-calendar
   title="Ember Calendar"
+  type="day"
   occurrences=occurrences
   dayStartingTime=dayStartingTime
   dayEndingTime=dayEndingTime
