--- a/app/templates/components/as-calendar/timetable.hbs
+++ b/app/templates/components/as-calendar/timetable.hbs
@@ -45,7 +45,11 @@
         {{#unless model.isMonthView}}
           <li class="as-calendar-timetable__day-hour-marker" style={{hourMarkerStyle}}>
             <div class="as-calendar-timetable__now-time">{{nowTime}}</div>
-            <div class="as-calendar-timetable__today-marker as-calendar-timetable__today-marker--day_{{currentDayNumber}}"></div>
+            {{#if model.isWeekView}}
+              <div class="as-calendar-timetable__today-marker as-calendar-timetable__today-marker--day_{{currentDayNumber}}"></div>
+            {{else}}
+              <div class="as-calendar-timetable__today-marker"></div>
+            {{/if}}
             <div class="as-calendar-timetable__now-line"></div>
           </li>
         {{/unless}}
