Calendar ui fixes.

--- a/app/styles/addons/ember-calendar/_paint-core.scss
+++ b/app/styles/addons/ember-calendar/_paint-core.scss
@@ -64,7 +64,7 @@ $colors: (
   ),
 
   border: (
-    base: #ececec,
+    base: #e5e5e5,
     dark: border (darken: 10%),
     light: border (lighten: 5%)
   ),
