--- a/app/styles/addons/ember-calendar/components/as-calendar/_timetable.scss
+++ b/app/styles/addons/ember-calendar/components/as-calendar/_timetable.scss
@@ -68,7 +68,6 @@
 
   @include bem-element('slot-label') {
     color: color(text, small);
-    font-weight: $font-weight-bold;
     text-align: right;
     padding-right: 7px !important;
 
@@ -87,14 +86,13 @@
     }
 
     &:nth-child(even) {
-      border-top-color: color(border, light);
+      border-top: 1px dotted color(border);
     }
   }
 
   @include bem-element('days') {
     height: 100%;
     left: 0;
-    // position: absolute;
     top: 0;
     width: 100%;
   }
@@ -128,16 +126,14 @@
   @include bem-element('now-time') {
     position: absolute;
     color: #ff7f6e;
-    font-weight: bold;
-    margin-top: -18px;
-    font-size: 17px;
+    margin-top: -19px;
     width: 10%;
     text-align: right;
     padding-right: 7px;
   }
 
   @include bem-element('today-marker') {
-    border: 5px solid #ff7f6e;
+    border: 4px solid #ff7f6e;
     border-radius: 50%;
     position: absolute;
     left: 0;
@@ -155,7 +151,7 @@
 
   @include bem-element('now-line') {
     height: 0;
-    border-top: 2px solid #ff7f6e;
+    border-top: 1px solid #ff7f6e;
     width: 90%;
     left: 10%;
     position: absolute;
