--- a/app/styles/addons/ember-calendar/components/as-calendar/_timetable.scss
+++ b/app/styles/addons/ember-calendar/components/as-calendar/_timetable.scss
@@ -88,6 +88,10 @@
     &:nth-child(even) {
       border-top: 1px dotted color(border);
     }
+
+    @include bem-modifier('is-disabled') {
+      background: #f2f2f2;
+    }
   }
 
   @include bem-element('days') {
