Add edit option to the calendar.

--- a/app/styles/addons/ember-calendar/components/as-calendar/timetable/_occurrence.scss
+++ b/app/styles/addons/ember-calendar/components/as-calendar/timetable/_occurrence.scss
@@ -9,14 +9,12 @@
       right: 0;
     }
 
-    @include bem-element('remove') {
-      @include icon(times);
-
+    .as-calendar-occurrence__remove,
+    .as-calendar-occurrence__edit {
       color: color(white);
       cursor: pointer;
       opacity: 0;
       position: absolute;
-      right: 0;
       top: $column-gutter / 8;
       transition: color $global-transition-duration / 2 linear,
         opacity $global-transition-duration / 2 linear;
@@ -26,10 +24,23 @@
         opacity: 1 !important;
       }
     }
+
+    @include bem-element('remove') {
+      @include icon(times);
+      right: 0;
+    }
+
+    @include bem-element('edit') {
+      @include icon(pencil);
+      right: 10px;
+    }
   }
 
   &:hover {
     @include bem-element('remove') {
+      opacity: .65;
+    }
+    @include bem-element('edit') {
       opacity: .65;
     }
   }
