--- a/app/templates/components/as-calendar/timetable/occurrence.hbs
+++ b/app/templates/components/as-calendar/timetable/occurrence.hbs
@@ -6,6 +6,9 @@
   {{/if}}
 
   {{#unless isInteracting}}
+    {{#if isEditable}}
+      <a {{action "edit" bubbles=false}} class="as-calendar-occurrence__edit"></a>
+    {{/if}}
     {{#if isRemovable}}
       <a {{action "remove" bubbles=false}} class="as-calendar-occurrence__remove"></a>
     {{/if}}
