--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -51,9 +51,11 @@
 {{as-calendar
   title="Ember Calendar"
   occurrences=occurrences
+  defaultOccurrenceType="type"
   dayStartingTime=dayStartingTime
   dayEndingTime=dayEndingTime
   timeSlotDuration="00:30"
   onAddOccurrence=(action "calendarAddOccurrence")
   onUpdateOccurrence=(action "calendarUpdateOccurrence")
+  onEditOccurrence=(action "calendarEditOccurrence")
   onRemoveOccurrence=(action "calendarRemoveOccurrence")}}
