Fixes #4 slot height in month view.

--- a/app/templates/components/as-calendar.hbs
+++ b/app/templates/components/as-calendar.hbs
@@ -28,6 +28,7 @@
               timeSlotHeight=monthTimeSlotHeight
               timetable=timetable
               timeSlotDuration=timeSlotDuration
+              isMonthView=true
               isDraggable=false
               isResizable=false
               isEditable=true
@@ -51,6 +52,7 @@
               timeSlotHeight=timeSlotHeight
               timetable=timetable
               timeSlotDuration=timeSlotDuration
+              isMonthView=false
               isDraggable=true
               isResizable=true
               isEditable=true
