add support for click/double events on occurrences

--- a/app/templates/components/as-calendar.hbs
+++ b/app/templates/components/as-calendar.hbs
@@ -34,6 +34,8 @@
               isDraggable=false
               isResizable=false
               isEditable=true
+              onClick=(action (optional this.attrs.onClickOccurrence))
+              onDoubleClick=(action (optional this.attrs.onDoubleClickOccurrence))
               onUpdate=(action this.attrs.onUpdateOccurrence)
               onEdit=(action this.attrs.onEditOccurrence)
               onRemove=(action this.attrs.onRemoveOccurrence)}}
@@ -58,6 +60,8 @@
               isDraggable=true
               isResizable=true
               isEditable=true
+              onClick=(action (optional this.attrs.onClickOccurrence))
+              onDoubleClick=(action (optional this.attrs.onDoubleClickOccurrence))
               onUpdate=(action this.attrs.onUpdateOccurrence)
               onEdit=(action this.attrs.onEditOccurrence)
               onRemove=(action this.attrs.onRemoveOccurrence)}}
