--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -57,6 +57,7 @@
   dayEndingTime=dayEndingTime
   timeSlotDuration="00:30"
   onNavigate=(action "calendarNavigate")
+  onClickOccurrence=(action "calendarClickOccurrence")
   onAddOccurrence=(action "calendarAddOccurrence")
   onUpdateOccurrence=(action "calendarUpdateOccurrence")
   onEditOccurrence=(action "calendarEditOccurrence")
