pass navigation info when changing view

--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -55,6 +55,7 @@
   dayStartingTime=dayStartingTime
   dayEndingTime=dayEndingTime
   timeSlotDuration="00:30"
+  onNavigate=(action "calendarNavigate")
   onAddOccurrence=(action "calendarAddOccurrence")
   onUpdateOccurrence=(action "calendarUpdateOccurrence")
   onEditOccurrence=(action "calendarEditOccurrence")
