add the year to the month view by default

--- a/app/templates/components/as-calendar/header.hbs
+++ b/app/templates/components/as-calendar/header.hbs
@@ -45,7 +45,7 @@
       {{moment-format model.startDate "ddd D MMM"}} - {{moment-format model.endDate "ddd D MMM"}}
     {{/if}}
     {{#if (eq model.type 'month')}}
-      {{moment-format model.startDate "MMMM"}}
+      {{moment-format model.startDate "MMMM YYYY"}}
     {{/if}}
   </p>
 </nav>
