added ability to override date formats

--- a/app/templates/components/as-calendar.hbs
+++ b/app/templates/components/as-calendar.hbs
@@ -2,12 +2,14 @@
   {{as-calendar/header
     title=title
     model=model
+    dateFormatOptions=dateFormatOptions
     onNavigate=(action "onNavigate")
     onTypeChange=(action "changeType")}}
 {{/if}}
 
 {{#as-calendar/timetable
   model=model
+  dateFormatOptions=dateFormatOptions
   timeZone=timeZone
   timeZoneOptions=timeZoneOptions
   showTimeZoneSearch=showTimeZoneSearch
