--- a/app/templates/components/as-calendar/header.hbs
+++ b/app/templates/components/as-calendar/header.hbs
@@ -39,13 +39,13 @@
 
   <p class="as-calendar-header__status">
     {{#if (eq model.type 'day')}}
-      {{moment-format model.startDate dateFormatOptions.day.header}}
+      {{moment-format model.startDate dateFormatOptions.dayHeader}}
     {{/if}}
     {{#if (eq model.type 'week')}}
-      {{moment-format model.startDate dateFormatOptions.week.header.start}} - {{moment-format model.endDate dateFormatOptions.week.header.end}}
+      {{moment-format model.startDate dateFormatOptions.weekHeaderStart}} - {{moment-format model.endDate dateFormatOptions.weekHeaderEnd}}
     {{/if}}
     {{#if (eq model.type 'month')}}
-      {{moment-format model.startDate dateFormatOptions.month.header}}
+      {{moment-format model.startDate dateFormatOptions.monthHeader}}
     {{/if}}
   </p>
 </nav>
