update dummy app

--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -51,6 +51,7 @@
 {{as-calendar
   title="Ember Calendar"
   occurrences=occurrences
+  dateFormatOptions=dateFormatOptions
   defaultOccurrenceType="type"
   dayStartingTime=dayStartingTime
   dayEndingTime=dayEndingTime
