allow for custom formatting of time-related labels

--- a/app/templates/components/as-calendar.hbs
+++ b/app/templates/components/as-calendar.hbs
@@ -10,6 +10,8 @@
 {{#as-calendar/timetable
   model=model
   dateFormatOptions=dateFormatOptions
+  nowTimeLabelFormat=nowTimeLabelFormat
+  timeSlotLabelFormat=timeSlotLabelFormat
   timeZone=timeZone
   timeZoneOptions=timeZoneOptions
   showTimeZoneSearch=showTimeZoneSearch
