--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -55,6 +55,8 @@
   defaultOccurrenceType="type"
   dayStartingTime=dayStartingTime
   dayEndingTime=dayEndingTime
+  nowTimeLabelFormat=nowTimeLabelFormat
+  timeSlotLabelFormat=timeSlotLabelFormat
   timeSlotDuration="00:30"
   onNavigate=(action "calendarNavigate")
   onClickOccurrence=(action "calendarClickOccurrence")
