add back empty column to offset days

--- a/app/templates/components/as-calendar/timetable.hbs
+++ b/app/templates/components/as-calendar/timetable.hbs
@@ -1,4 +1,7 @@
 <div class="as-calendar-timetable__row as-calendar-timetable__row--highlighted">
+  <div class="as-calendar-timetable__first-column">
+    &nbsp;
+  </div>
   <div class="as-calendar-timetable__columns">
     <ul>
       {{#each days as |day|}}
