--- a/app/templates/components/as-calendar/occurrence.hbs
+++ b/app/templates/components/as-calendar/occurrence.hbs
@@ -1,6 +1,6 @@
 <div class="as-calendar-occurrence__container">
   {{#if hasBlock}}
-    {{yield}}
+    {{yield model}}
   {{else}}
     <h1 class="as-calendar-occurrence__title" style={{titleStyle}}>{{title}}</h1>
   {{/if}}
