remove jquery.simulate

--- a/tests/dummy/app/styles/app.scss
+++ b/tests/dummy/app/styles/app.scss
@@ -1,7 +1,4 @@
-@import 'bower_components/fontawesome/scss/variables';
-@import 'bower_components/fontawesome/scss/path';
-@import 'bower_components/fontawesome/scss/mixins';
-@import 'bower_components/fontawesome/scss/icons';
+@import "font-awesome";
 @import 'addons/ember-calendar/paint-core';
 @import 'addons/ember-calendar/main';
 html {
