--- a/app/templates/components/as-calendar.hbs
+++ b/app/templates/components/as-calendar.hbs
@@ -34,7 +34,7 @@
               onClick=(action (optional this.attrs.onClickOccurrence))
               onDoubleClick=(action (optional this.attrs.onDoubleClickOccurrence))
               onUpdate=(action this.attrs.onUpdateOccurrence)
-              onEdit=(action this.attrs.onEditOccurrence)
+              onEdit=(action (optional this.attrs.onEditOccurrence))
               onRemove=(action this.attrs.onRemoveOccurrence)}}
           {{/if}}
         </li>
@@ -60,7 +60,7 @@
               onClick=(action (optional this.attrs.onClickOccurrence))
               onDoubleClick=(action (optional this.attrs.onDoubleClickOccurrence))
               onUpdate=(action this.attrs.onUpdateOccurrence)
-              onEdit=(action this.attrs.onEditOccurrence)
+              onEdit=(action (optional this.attrs.onEditOccurrence))
               onRemove=(action this.attrs.onRemoveOccurrence)}}
           {{/if}}
         </li>
