--- a/app/styles/addons/ember-calendar/components/as-calendar/_timetable.scss
+++ b/app/styles/addons/ember-calendar/components/as-calendar/_timetable.scss
@@ -118,7 +118,7 @@
   }
 
   @include bem-element('slot-item-check') {
-    @include icon(check);
+    //@include icon(check);
   }
 
   @include bem-element('days') {
