--- a/app/styles/addons/ember-calendar/_paint-core.scss
+++ b/app/styles/addons/ember-calendar/_paint-core.scss
@@ -35,21 +35,21 @@ $global-transition-duration: .325s !default;
   }
 }
 
-@mixin icon($name, $selector: '') {
-  @extend .fa-#{$name};
-
-  @if $selector == '' {
-    @include fa-icon;
-  } @else {
-    &:#{$selector} {
-      @include fa-icon;
-    }
-  }
-}
-
-@mixin button-icon($icon) {
-  @include icon($icon);
-}
+// @mixin icon($name, $selector: '') {
+//   @extend .fa-#{$name};
+//
+//   @if $selector == '' {
+//     @include fa-icon;
+//   } @else {
+//     &:#{$selector} {
+//       @include fa-icon;
+//     }
+//   }
+// }
+//
+// @mixin button-icon($icon) {
+//   @include icon($icon);
+// }
 
 $colors: (
   text: (
