--- a/app/styles/addons/ember-calendar/components/as-calendar/timetable/_occurrence.scss
+++ b/app/styles/addons/ember-calendar/components/as-calendar/timetable/_occurrence.scss
@@ -26,12 +26,12 @@
     }
 
     @include bem-element('remove') {
-      @include icon(times);
+      //@include icon(times);
       right: 0;
     }
 
     @include bem-element('edit') {
-      @include icon(pencil);
+      //@include icon(pencil);
       right: 15px;
     }
   }
