replace rest of font awesome usage

--- a/app/templates/components/as-calendar/header.hbs
+++ b/app/templates/components/as-calendar/header.hbs
@@ -29,11 +29,11 @@
     </li>
 
     <li class="as-calendar-header__nav-group-item">
-      <button class="as-calendar-header__nav-group-action as-calendar-header__nav-group-action--previous" {{action "navigatePrevious"}}></button>
+      <button class="as-calendar-header__nav-group-action as-calendar-header__nav-group-action--previous" {{action "navigatePrevious"}}>{{fa-icon "caret-left"}}</button>
     </li>
 
     <li class="as-calendar-header__nav-group-item">
-      <button class="as-calendar-header__nav-group-action as-calendar-header__nav-group-action--next" {{action "navigateNext"}}></button>
+      <button class="as-calendar-header__nav-group-action as-calendar-header__nav-group-action--next" {{action "navigateNext"}}>{{fa-icon "caret-right"}}</button>
     </li>
   </ul>
 
