--- a/app/templates/components/as-calendar/timetable/occurrence.hbs
+++ b/app/templates/components/as-calendar/timetable/occurrence.hbs
@@ -7,7 +7,7 @@
 
   {{#unless isInteracting}}
     {{#if isEditable}}
-      <a {{action "edit" bubbles=false}} class="as-calendar-occurrence__edit">{{fa-icon "pencil"}}</a>
+      <a {{action "edit" bubbles=false}} class="as-calendar-occurrence__edit">{{fa-icon "edit"}}</a>
     {{/if}}
     {{#if isRemovable}}
       <a {{action "remove" bubbles=false}} class="as-calendar-occurrence__remove">{{fa-icon "times"}}</a>
