[DELIVERY-3391] adding parameter to change hour format

--- a/app/templates/components/as-calendar.hbs
+++ b/app/templates/components/as-calendar.hbs
@@ -11,6 +11,7 @@
   timeZoneOptions=timeZoneOptions
   showTimeZoneSearch=showTimeZoneSearch
   timeSlotHeight=timeSlotHeight
+  timeSlotFormat=timeSlotFormat
   defaultTimeZoneQuery=defaultTimeZoneQuery
   onSelectTime=(action "addOccurrence")
   onChangeTimeZone=(action "changeTimeZone") as |day timetable|}}
