[DELIVERY-3391] adding parameter to change hour format

--- a/app/templates/components/as-calendar.hbs
+++ b/app/templates/components/as-calendar.hbs
@@ -8,6 +8,7 @@
 {{#as-calendar/timetable
   model=model
   timeSlotHeight=timeSlotHeight
+  timeSlotLabelFormat=timeSlotLabelFormat
   onSelectTime=(action "addOccurrence") as |day timetable|}}
   <ul class="occurrences">
     {{#each day.occurrences as |occurrence|}}
